--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,13 @@
 spring.application.name=FondoE
-spring.datasource.url=jdbc:mysql://localhost:3306/FondoE?serverTimeZone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3306/FondoE?serverTimezone=UTC
 spring.datasource.username=root
-spring.datasource.password=12345678
+spring.datasource.password=admin
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
+logging.level.org.springframework=DEBUG
+logging.level.org.hibernate=DEBUG
+
+
+
